added permissions and logs
