# api/api.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	v1 "github.com/ibrat-muslim/blog_app_api_gateway/api/v1"
 	"github.com/ibrat-muslim/blog_app_api_gateway/config"
+	"github.com/sirupsen/logrus"
 
 	swaggerFiles "github.com/swaggo/files"     // swagger embed files
 	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
@@ -16,6 +17,7 @@ import (
 type RouterOptions struct {
 	Cfg        *config.Config
 	GrpcClient grpcPkg.GrpcClientI
+	Logger     *logrus.Logger
 }
 
 // @title           Swagger for blog api
@@ -23,12 +25,17 @@ type RouterOptions struct {
 // @description     This is a blog service api.
 // @host      localhost:8000
 // @BasePath  /v1
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+// @Security ApiKeyAuth
 func New(opt *RouterOptions) *gin.Engine {
 	router := gin.Default()
 
 	handlerV1 := v1.New(&v1.HandlerV1Options{
 		Cfg:        opt.Cfg,
 		GrpcClient: opt.GrpcClient,
+		Logger:     opt.Logger,
 	})
 
 	apiV1 := router.Group("/v1")
@@ -43,13 +50,13 @@ func New(opt *RouterOptions) *gin.Engine {
 	// apiV1.GET("/users/me", handlerV1.GetUserProfile)
 	apiV1.GET("/users", handlerV1.GetUsers)
 	apiV1.GET("/users/email/:email", handlerV1.GetUserByEmail)
-	apiV1.POST("/users", handlerV1.CreateUser)
-	apiV1.PUT("/users/:id", handlerV1.UpdateUser)
-	apiV1.DELETE("users/:id", handlerV1.DeleteUser)
+	apiV1.POST("/users", handlerV1.AuthMiddleware("users", "create"), handlerV1.CreateUser)
+	apiV1.PUT("/users/:id", handlerV1.AuthMiddleware("users", "update"), handlerV1.UpdateUser)
+	apiV1.DELETE("users/:id", handlerV1.AuthMiddleware("users", "delete"), handlerV1.DeleteUser)
 
-	apiV1.POST("/posts", handlerV1.CreatePost)
+	apiV1.POST("/posts", handlerV1.AuthMiddleware("posts", "create"), handlerV1.CreatePost)
 
-	apiV1.POST("/categories", handlerV1.CreateCategory)
+	apiV1.POST("/categories", handlerV1.AuthMiddleware("categories", "create"), handlerV1.CreateCategory)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
